<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Delikatny Alarm</string>
    <string name="amountOfPhaseButton">Ilość cykli budzenia</string>
    <string name="setFirstPhase">Pierwszy budzik</string>
    <string name="setSecondPhase">Drugi budzik</string>
    <string name="setThirdPhase">Trzeci budzik</string>
    <string name="setFourthPhase">Czwarty budzik</string>
    <string name="setVolumeLabel">Ustaw głośność</string>
    <string name="setTimeLabel">Ustaw czas budzenia</string>
    <string name="testButton">Test</string>
    <string name="stopButtonLable">STOP</string>
    <string name="settingsButtonLable">Ustawienia</string>
    <string name="startButtonLabel">START</string>
    <string name="wakeUpMainLabel">Budze cie</string>
	<string name="saveButtonLabel">Zapisz</string>
	<string name="testDialogTitle">Testuje</string>
	<string name="testDialogMessage">Naciśnij ok aby zakończyć.</string>
	<string name="closeDialogButtonLabel">Zamknij</string>
	<string name="alarmEnableTogle">Alarm ustawiony na</string>
	<string name="alarmDisableTogle">Alarm wyłączony</string>
	<string name="setAlarmAudionButtonLabel">Ustaw dźwięk</string>
	<string name="addAlarmButtonLabel">Dodaj alarm</string>
	<string name="deleteAlarmAlertTitle">Usunąć wybrany alarm ?</string>
	<string name="deleteAlarmButtonLabel">Usuń</string>
	<string name="cancelButtonLabel">Anuluj</string>
	<string name="mondayLabel">P</string>
	<string name="tuesdayLabel">W</string>
	<string name="wednesdayLabel">Ś</string>
	<string name="thursdayLabel">C</string>
	<string name="fridayLabel">P</string>
	<string name="saturdayLabel">S</string>
	<string name="sundayLabel">N</string>
	
	<string-array name="dayOfWeek">
	    <item>Empty</item>
        <item>@string/sundayLabel</item>
        <item>@string/mondayLabel</item>
        <item>@string/tuesdayLabel</item>
        <item>@string/wednesdayLabel</item>
        <item>@string/thursdayLabel</item>
        <item>@string/fridayLabel</item>
        <item>@string/saturdayLabel</item>
    </string-array>	
	
    <string-array name="phaseAmountArrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    
    <string-array name="timeArrays">
        <item>10 s</item>
        <item>30 s</item>
        <item>45 s</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
    </string-array>

</resources>