<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <TimePicker
        android:id="@+id/alarmTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/disableAlarmButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:layout_centerHorizontal="true"
        android:text="@string/stopButtonLable" />

    <Button
        android:id="@+id/enableAlarmButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmTimePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/startButtonLabel"
        android:textSize="20dp" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disableAlarmButton"
        android:layout_alignLeft="@+id/enableAlarmButton"
        android:layout_alignRight="@+id/enableAlarmButton"
        android:layout_marginBottom="44dp"
        android:text="@string/settingsButtonLable" />

</RelativeLayout>
